src/librustdoc/html/static/rustdoc.css
/* ... */
#theme-choices {
	display: none;
	position: absolute;
	left: 0;
	top: 28px;
	border: 1px solid;
	border-radius: 3px;
	z-index: 1;
	cursor: pointer;
}

#theme-choices > button {
	border: none;
	width: 100%;
	padding: 4px 8px;
	text-align: center;
	background: rgba(0,0,0,0);
}

#theme-choices > button:not(:first-child) {
	border-top: 1px solid;
}

/* Media Queries */

@media (min-width: 701px) {
	/* In case there is no documentation before a code block, we need to add some margin at the top
	to prevent an overlay between the "collapse toggle" and the information tooltip.
	However, it's not needed with smaller screen width because the doc/code block is always put
	"one line" below. */
	.docblock > .information:first-child > .tooltip {
		margin-top: 16px;
	}
}

@media (max-width: 700px) {
	body {
		padding-top: 0px;
	}

	.rustdoc > .sidebar {
		height: 45px;
		min-height: 40px;
		margin: 0;
		margin-left: -15px;
		padding: 0 15px;
		position: static;
		z-index: 11;
	}

	.sidebar > .location {
		float: right;
		margin: 0px;
		margin-top: 2px;
		padding: 3px 10px 1px 10px;
		min-height: 39px;
		background: inherit;
		text-align: left;
		font-size: 24px;
	}

	.sidebar .location:empty {
		padding: 0;
	}

	.sidebar .logo-container {
		width: 35px;
		height: 35px;
		margin-top: 5px;
		margin-bottom: 5px;
		float: left;
		margin-left: 50px;
	}

	.sidebar .logo-container > img {
		max-width: 35px;
		max-height: 35px;
	}

	.sidebar-menu {
		position: fixed;
		z-index: 10;
		font-size: 2rem;
		cursor: pointer;
		width: 45px;
		left: 0;
		text-align: center;
		display: block;
		border-bottom: 1px solid;
		border-right: 1px solid;
		height: 45px;
	}

	.rustdoc.source > .sidebar > .sidebar-menu {
		display: none;
	}

	.sidebar-elems {
		position: fixed;
		z-index: 1;
		left: 0;
		top: 45px;
		bottom: 0;
		overflow-y: auto;
		border-right: 1px solid;
		display: none;
	}

	.sidebar > .block.version {
		border-bottom: none;
		margin-top: 12px;
		margin-bottom: 0;
	}

	nav.sub {
		width: calc(100% - 32px);
		float: right;
	}

	.content {
		margin-left: 0px;
	}

	#main, #search {
		margin-top: 45px;
		padding: 0;
	}

	.content h4 > .out-of-band {
		position: inherit;
	}

	.toggle-wrapper > .collapse-toggle {
		left: 0px;
	}

	.toggle-wrapper {
		height: 1.5em;
	}

	#search {
		margin-left: 0;
	}

	.content .impl-items .method, .content .impl-items > .type, .impl-items > .associatedconstant {
		display: flex;
	}

	.anchor {
		display: none !important;
	}

	h1.fqn {
		overflow: initial;
	}

	.theme-picker {
		left: 10px;
		top: 54px;
		z-index: 1;
	}

	h4 > .notable-traits {
		position: absolute;
		left: -22px;
		top: 24px;
	}

	#titles > button > div.count {
		float: left;
		width: 100%;
	}

	#titles {
		height: 50px;
	}

	.sidebar.mobile {
		position: fixed;
		width: 100%;
		margin-left: 0;
		background-color: rgba(0,0,0,0);
		height: 100%;
	}
	/*
	This allows to prevent the version text to overflow the sidebar title on mobile mode when the
	sidebar is displayed (after clicking on the "hamburger" button).
	*/
	.sidebar.mobile > div.version {
		overflow: hidden;
		max-height: 33px;
	}
	.sidebar {
		width: calc(100% + 30px);
	}

	.show-it {
		display: block;
		width: 246px;
	}

	.show-it > .block.items {
		margin: 8px 0;
	}

	.show-it > .block.items > ul {
		margin: 0;
	}

	.show-it > .block.items > ul > li {
		text-align: center;
		margin: 2px 0;
	}

	.show-it > .block.items > ul > li > a {
		font-size: 21px;
	}

	/* Because of ios, we need to actually have a full height sidebar title so the
	 * actual sidebar can show up. But then we need to make it transparent so we don't
	 * hide content. The filler just allows to create the background for the sidebar
	 * title. But because of the absolute position, I had to lower the z-index.
	 */
	#sidebar-filler {
		position: fixed;
		left: 45px;
		width: calc(100% - 45px);
		top: 0;
		height: 45px;
		z-index: -1;
		border-bottom: 1px solid;
	}

	.collapse-toggle {
		left: -20px;
	}

	.impl > .collapse-toggle {
		left: -10px;
	}

	.item-list > details.rustdoc-toggle > summary:not(.hideme)::before {
		left: -10px;
	}

	#all-types {
		margin: 10px;
	}

	#sidebar-toggle {
		top: 100px;
		width: 30px;
		font-size: 1.5rem;
		text-align: center;
		padding: 0;
	}

	#source-sidebar {
		z-index: 11;
	}

	#main > .line-numbers {
		margin-top: 0;
	}

	.notable-traits .notable-traits-tooltiptext {
		left: 0;
		top: 100%;
	}

	/* We don't display the help button on mobile devices. */
	.help-button {
		display: none;
	}
	.search-container > div {
		width: calc(100% - 32px);
	}
}

@media print {
	nav.sub, .content .out-of-band, .collapse-toggle {
		display: none;
	}
}

@media (max-width: 464px) {
	#titles, #titles > button {
		height: 73px;
	}

	/* This is to prevent the search bar from being underneath the <section>
	 * element following it.
	 */
	#main, #search {
		margin-top: 100px;
	}

	#main > table:not(.table-display) td {
		word-break: break-word;
		width: 50%;
	}

	.search-container > div {
		display: block;
		width: calc(100% - 37px);
	}

	#crate-search {
		width: 100%;
		border-radius: 4px;
		border: 0;
	}

	#crate-search + .search-input {
		width: calc(100% + 71px);
		margin-left: -36px;
	}

	#theme-picker, #settings-menu {
		padding: 5px;
		width: 31px;
		height: 31px;
	}

	#theme-picker {
		margin-top: -2px;
	}

	#settings-menu {
		top: 7px;
	}

	.docblock {
		margin-left: 12px;
	}
}

h3.notable {
	margin: 0;
	margin-bottom: 13px;
	font-size: 19px;
}

kbd {
	display: inline-block;
	padding: 3px 5px;
	font: 15px monospace;
	line-height: 10px;
	vertical-align: middle;
	border: solid 1px;
	border-radius: 3px;
	box-shadow: inset 0 -1px 0;
	cursor: default;
}

.hidden-by-impl-hider,
.hidden-by-usual-hider {
	/* important because of conflicting rule for small screens */
	display: none !important;
}

#implementations-list > h3 > span.in-band {
	width: 100%;
}

.table-display {
	width: 100%;
	border: 0;
	border-collapse: collapse;
	border-spacing: 0;
	font-size: 16px;
}
/* ... */

